--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 
-  <base href="./">
+<!--  <base href="/portfolio/">-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -35,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "4236367841";
+    const serviceWorkerVersion = "976063243";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -45,7 +45,18 @@
 </head>
 <body>
   <script>
-
+    window.addEventListener('load', function(ev) {
+     // Download main.dart.js
+     _flutter.loader.loadEntrypoint({
+       serviceWorker: {
+         serviceWorkerVersion: serviceWorkerVersion,
+       }
+     }).then(function(engineInitializer) {
+       return engineInitializer.initializeEngine();
+     }).then(function(appRunner) {
+       return appRunner.runApp();
+     });
+   });
   </script>
 </body>
 </html>
